--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "333750c9",
    "metadata": {},
    "outputs": [
@@ -335,8 +335,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fc9498f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fix' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mfix\u001b[49m\n",
+      "\u001b[31mNameError\u001b[39m: name 'fix' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "fix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cb7a95f",
    "metadata": {},
    "outputs": [],
    "source": []
